WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312252
Speculation Rules - race condition with non-OK responses leads to wrong response being served
https://bugs.webkit.org/show_bug.cgi?id=312252
Summary
Speculation Rules - race condition with non-OK responses leads to wrong respo...
Yoav Weiss
Reported
2026-04-14 02:24:30 PDT
As seen in
https://bugs.webkit.org/show_bug.cgi?id=312221
, on onemileatatime.com, clicking links loads blank pages. It looks like the prefetches result in 503 but are being used by navigations when those navigations were initiated before the response arrived.
Attachments
Add attachment
proposed patch, testcase, etc.
Yoav Weiss
Comment 1
2026-04-14 07:11:11 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62733
EWS
Comment 2
2026-04-17 06:27:56 PDT
Committed
311445@main
(29e582611afa): <
https://commits.webkit.org/311445@main
> Reviewed commits have been landed. Closing PR #62733 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-04-17 06:28:13 PDT
<
rdar://problem/175005152
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug